# personal-skills

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  install-plugins.sh  plugins.json  skills.sh.json
.claude-plugin/: marketplace.json
docs/: agent-workflow.md  ansible.md  frontend.md  git-tools.md  lemonade.md  python-dev.md
plugins/agent-workflow/.claude-plugin/: plugin.json
plugins/ansible/.claude-plugin/: plugin.json
plugins/frontend/.claude-plugin/: plugin.json
plugins/git-tools/.claude-plugin/: plugin.json
plugins/git-tools/hooks/: hooks.json
plugins/git-tools/scripts/: attribution-guard.py
plugins/lemonade/.claude-plugin/: plugin.json
plugins/skill-inject/: Cargo.toml  DEVELOPING.md  PLAN.md  README.md
plugins/skill-inject/examples/: rerank_probe.rs
plugins/skill-inject/opencode/: README.md  ski.ts
plugins/skill-inject/scripts/: ski-bootstrap.sh
plugins/skill-inject/src/: config.rs  hook.rs  index.rs  inject.rs  lib.rs  main.rs  observe.rs  paths.rs  rerank.rs  session_start.rs  skill.rs
plugins/skill-inject/src/embed/: fast.rs  mod.rs
plugins/skill-inject/tests/: golden.rs
plugins/skill-inject/tests/data/: README.md  run-anthropic-prompts.sh
skills/add-ansible-role/: SKILL.md  config.json
skills/debug-lemonade/: SKILL.md
skills/handoff/: SKILL.md
skills/pickup/: SKILL.md
skills/pre-commit-setup/: SKILL.md
skills/react-ts-setup/: SKILL.md
skills/senior-frontend-refactor/: SKILL.md
skills/uv-develop/: SKILL.md
skills/uv-setup/: SKILL.md
skills/watchlist/: SKILL.md
(+10 files in other folders)
